working version for creating all-in-one-executable jar